Fixed mobile input button svg getting slightly cropped

--- a/src/index.scss
+++ b/src/index.scss
@@ -303,8 +303,8 @@ section {
 					border-width: 0.25vw;
 					border-radius: 4.5vw;
 					
-					background-position: 1.25vw;
-					background-size: 5.5vw;
+					background-position: 1.5vw;
+					background-size: 5.4vw;
 				}
 			}
 		}
